📱  Adapt menu for mobile view

--- a/user/themes/landed/templates/partials/navigation.html.twig
+++ b/user/themes/landed/templates/partials/navigation.html.twig
@@ -34,7 +34,7 @@
                         <a href="{{ page.url }}" class="{{ page.header.menu_classes }}">
                             {{ page.menu }}
                         </a>
-                        <span class="children-trigger" onclick="$(this).addClass('active')">
+                        <span class="children-trigger" onclick="$(this).toggleClass('active')">
                             +
                         </span>
                         <ul>
