--- a/user/themes/landed/css/custom.css
+++ b/user/themes/landed/css/custom.css
@@ -1,4 +1,5 @@
 #header {
+  display: block !important;
   background: transparent;
   box-shadow: none;
   border: none;
@@ -11,7 +12,7 @@
 
 #logo img {
   max-height: 100%;
-  max-width: 100%;
+  max-width: 80%;
 }
 
 #banner {
@@ -45,11 +46,11 @@
   align-items: center;
   align-content: center;
   justify-items: center;
+  padding: 0;
 }
 
 @media all and (max-width: 800px) {
   #nav ul {
-    align-items: flex-start;
     align-content: flex-start;
   }
 }
@@ -61,6 +62,8 @@
   font-weight: bold;
   line-height: 80px;
   z-index: 1;
+  margin: 0 !important;
+  padding: 0 !important;
 }
 
 #nav ul li:after {
@@ -104,14 +107,22 @@
   margin-left: 0;
   width: 500px;
   text-align: left;
-}
-
-#nav ul li .children-trigger + ul li:after {
-
+  font-size: 32px;
+  line-height: 0;
 }
 
 #nav ul li .children-trigger.active + ul {
   display: block;
+}
+
+@media all and (max-width: 800px) {
+  #nav ul li .children-trigger.active + ul {
+    left: 64px;
+  }
+
+  #nav ul li .children-trigger + ul li:after {
+    bottom: 0px;    
+  }  
 }
 
 .content img {
@@ -150,7 +161,7 @@ body {
   width: 50px;
   height: 50px;
   cursor: pointer;
-  z-index: 100;
+  z-index: 300;
 }
 
 .menu-icon:hover,
