--- a/user/themes/landed/templates/partials/base.html.twig
+++ b/user/themes/landed/templates/partials/base.html.twig
@@ -16,6 +16,7 @@
 
     <link rel="icon" type="image/png" href="{{ url('theme://images/favicon.png') }}" />
     <link rel="canonical" href="{{ page.url(true, true) }}" />
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:300,400&display=swap" rel="stylesheet">
 
     <!-- TODO: <noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript> -->
     {% block stylesheets %}
