--- a/user/themes/landed/css/custom.css
+++ b/user/themes/landed/css/custom.css
@@ -1,5 +1,29 @@
+@font-face {
+  font-family: "Less";
+  font-weight: normal;
+  src: url("../fonts/Less.otf");
+}
+
+@font-face {
+  font-family: "Less";
+  font-weight: 100;
+  src: url("../fonts/Less-Light.otf");
+}
+
+@font-face {
+  font-family: "Less";
+  font-weight: bold;
+  src: url("../fonts/Less-Bold.otf");
+}
+
+@font-face {
+  font-family: 'Senda';
+  font-weight: normal;
+  src: url("../fonts/SendaDisplay_BECO.otf");
+}
+
 *, *:before, *:after {
-  font-family: 'Roboto Condensed', sans-serif !important;
+  font-family: Less, sans-serif !important;
   font-weight: 300;
 }
 
@@ -30,12 +54,26 @@
   background-position: left !important;
   background-repeat: no-repeat;
   background-size: 70%;
+  background-color: #000;
+  box-shadow: none;
 }
 
 #banner .content {
   position: absolute;
   right: 0;
   bottom: 0;
+  padding: 24px;
+}
+
+#banner .content h2 {
+  font-size: 6em !important;
+  font-family: Senda !important;
+}
+
+#banner .content p {
+  letter-spacing: 0.15em;
+  font-weight: normal;
+  margin: 0 !important;
 }
 
 @media screen and (max-width: 736px) {
@@ -50,6 +88,12 @@
     left: 0;
     right: 0;
     padding: 0;
+    max-width: 100%;
+    margin: 0;
+  }
+
+  #banner .content h2 {
+    font-size: 4em !important;
   }
 
   #banner .content p {
@@ -59,6 +103,13 @@
 
 #banner:after {
   opacity: 0;
+}
+
+@media screen and (max-width: 736px) {
+  .image,
+  .image img {
+    border-radius: 0 !important;
+  }
 }
 
 #banner .content {
