--- a/user/themes/landed/templates/partials/base.html.twig
+++ b/user/themes/landed/templates/partials/base.html.twig
@@ -48,11 +48,13 @@
     {% block header %}
         <!-- Header -->
             <header id="header">
-                {# <h1 id="logo">
+                {% if page.template != 'home' %}
+                <h1 id="logo">
                     <a href="{{ base_url == '' ? '/' : base_url }}">
                         <img src="{{ url('theme://images/logo.png') }}" alt="{{ site.title }}" />
                     </a>
-                </h1> #}
+                </h1>
+                {% endif %}
 
                 {% block header_navigation %}
                     <div class="menu-icon" onclick="$(body).toggleClass('nav'); $(this).toggleClass('clicked');">
@@ -104,12 +106,12 @@
             {% endblock %}
             </div>
         </div>
-{% endblock %}
 
+{% endblock %}
+{% include 'partials/sections/signup.html.twig' with { id: 'signup' } %}
 {% block footer %}
     {% include 'partials/footer.html.twig' %}
 {% endblock %}
-
     </div>
 {% block bottom %}
     {{ assets.js('bottom') }}
