--- a/user/themes/landed/templates/partials/base.html.twig
+++ b/user/themes/landed/templates/partials/base.html.twig
@@ -47,7 +47,7 @@
 
     {% block header %}
         <!-- Header -->
-            <header id="header">
+            <header id="header" class="{% if page.template == 'home' %}home{% endif %}">
                 {% if page.template != 'home' %}
                 <h1 id="logo">
                     <a href="{{ base_url == '' ? '/' : base_url }}">
